view on mobile has been fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,6 @@
   font-size: 80px;
 }
 .home {
-  margin-top: 30px;
   border: 1px dashed red;
   box-shadow: 5px 10px 10px #888888;
   padding-bottom: 50px;
