--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -5,7 +5,7 @@
   color: #008000;
 }
 .covid {
-  font-size: 35px;
+  font-size: 30px;
   font-weight: bold;
 }
 .name {
